# lab-11

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
include/: Command.h  LogSetup.h  Settings.h  Timer.h  Utils.h
sources/: LogSetup.cpp  Timer.cpp  Utils.cpp  main.cpp
sources1/: Command.cpp  Settings.cpp
